kubernetes/5_synapse_workers/8_account_data_worker/1_statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: account-data-workers
  namespace: synapse
  labels:
    app: account-data-workers
spec:
  serviceName: account-data-workers
  replicas: 1
  selector:
    matchLabels:
      app: account-data-workers
  template:
    metadata:
      labels:
        app: account-data-workers
    spec:
      volumes:
        - name: scripts-volume
          configMap:
            name: account-data-worker-config
            defaultMode: 0555
        - name: worker-config-volume
          emptyDir: {}
        - name: synapse-config-volume
          configMap:
            name: synapse-config
        - name: media-volume
          persistentVolumeClaim:
            claimName: synapse-media
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.74.0
        args: ["run", "--config-path=/data/homeserver.yaml", "--config-path=/data/worker/worker.yaml"]
        ports:
        - name: http
          containerPort: 8083
        - name: metrics
          containerPort: 9090
        volumeMounts:
          - name: synapse-config-volume
            mountPath: /data/homeserver.yaml
            subPath: homeserver.yaml
          - name: synapse-config-volume
            mountPath: /data/log.config
            subPath: log.config
          - name: synapse-config-volume
            mountPath: /data/signing.key
            subPath: signing.key
          - name: worker-config-volume
            mountPath: /data/worker
          - name: media-volume
            mountPath: /data/media_store
        readinessProbe:
          httpGet:
            path: /health
            port: 8083
