kubernetes/5_synapse_workers/8_account_data_worker/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: account-data-workers
  namespace: synapse
spec:
  selector:
    app: account-data-workers
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: metrics
      port: 9090
      targetPort: 9090
