kubernetes/5_synapse_workers/8_account_data_worker/3_ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: account-data-workers
  namespace: synapse
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`www.greyman.services`) || Host(`greyman.services`)) && (
        PathPrefix(`/_matrix/client/{(r0|v3|unstable)}/{(.*)}/tags`) || 
        PathPrefix(`/_matrix/client/{(r0|v3|unstable)}/{(.*)}/account_data`))
      kind: Rule
      priority: 10
      services:
        - name: account-data-workers
          port: 8083
  tls:
    secretName: greyman-services-tls
